TestSuite/errors/err0324.pas
begin
  var a: sequence of procedure;
end.